--- a/test_patch.ipynb
+++ b/test_patch.ipynb
@@ -119,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=0.59s)\n",
+      "Done (t=0.78s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -142,19 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'boxes': tensor([[ 3.4035e+02,  2.1968e+02,  4.3288e+02,  3.4932e+02],\n         [ 4.3840e-01,  2.7132e+02,  4.0441e+02,  4.8419e+02],\n         [ 2.5353e+02,  2.2939e+02,  3.4715e+02,  3.2131e+02],\n         [ 1.8724e+02,  1.3128e+02,  2.3774e+02,  2.2943e+02],\n         [ 5.2076e+02,  1.9575e+02,  5.2604e+02,  2.2605e+02],\n         [ 4.2667e+02, -4.0800e+01,  5.7799e+02,  4.1310e+02],\n         [ 5.0853e+02,  1.9625e+02,  5.1425e+02,  2.2703e+02],\n         [ 5.3240e+02,  1.9560e+02,  5.3793e+02,  2.2527e+02],\n         [ 9.7829e+01,  1.9261e+02,  1.1479e+02,  2.3530e+02],\n         [ 4.9558e+02,  1.9773e+02,  5.0236e+02,  2.2774e+02],\n         [ 4.4631e+02,  1.9570e+02,  4.5254e+02,  2.2564e+02],\n         [ 4.5515e+02,  1.9393e+02,  4.6079e+02,  2.2688e+02],\n         [ 4.9371e+02,  1.5853e+02,  5.2806e+02,  1.6647e+02],\n         [ 4.9275e+02,  1.6960e+02,  5.3120e+02,  1.7593e+02],\n         [ 4.9797e+02,  2.4862e+02,  5.2397e+02,  2.8867e+02],\n         [ 4.4589e+02,  1.4862e+02,  4.5186e+02,  1.8258e+02],\n         [ 5.4401e+02,  1.9245e+02,  5.4987e+02,  2.2727e+02],\n         [ 4.3580e+02,  1.9300e+02,  4.4148e+02,  2.2655e+02]]),\n 'labels': tensor([64., 65., 62., 64., 84., 84., 84., 84., 44., 84., 84., 84., 84., 84.,\n         84., 84., 84., 84.]),\n 'scores': tensor([0.9986, 0.9970, 0.9477, 0.9460, 0.8077, 0.7765, 0.7064, 0.6922, 0.6357,\n         0.6270, 0.6203, 0.6072, 0.5672, 0.5655, 0.5601, 0.5598, 0.5299, 0.5211])}"
+      "text/plain": "tensor([64, 65, 62, 64, 84, 84, 84, 84, 44, 84, 84, 84, 84, 84, 84, 84, 84, 84],\n       dtype=torch.int32)"
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model((DS[2][0],))[0]"
+    "model((DS[2][0],))[0]['labels'].to(torch.int)"
    ],
    "metadata": {
     "collapsed": false
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -207,16 +207,115 @@
     },
     {
      "data": {
-      "text/plain": "{'loss_box_reg': tensor(0.0815),\n 'loss_objectness': tensor(0.0711),\n 'loss_classifier': tensor(0.0063),\n 'atk_loss_box_reg': None,\n 'atk_loss_objectness': None,\n 'atk_loss_classifier': None}"
+      "text/plain": "dict_values([tensor(0.0815), tensor(0.0711), tensor(0.0063), None, None, None])"
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "i = 2\n",
-    "model((DS[i][0], DS[i + 1][0]), (DS[i][1], DS[i + 1][1]))"
+    "loss = 0\n",
+    "model((DS[i][0], DS[i + 1][0]), (DS[i][1], DS[i + 1][1])).values()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
+    "a = torch.rand(1, 4, requires_grad=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[0.4751, 0.5357, 0.9920, 0.9210]], requires_grad=True)"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[0.2258, 0.2870, 0.9840, 0.8482]], grad_fn=<PowBackward0>)"
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = a ** 2\n",
+    "b"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([0.2258, 0.2870, 0.9840, 0.8482], grad_fn=<SelectBackward0>)"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = b[0]\n",
+    "c"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "element 0 of tensors does not require grad and does not have a grad_fn",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_10960\\336220481.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mloss\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mbackward\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;32mD:\\Anaconda\\lib\\site-packages\\torch\\_tensor.py\u001B[0m in \u001B[0;36mbackward\u001B[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001B[0m\n\u001B[0;32m    486\u001B[0m                 \u001B[0minputs\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0minputs\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    487\u001B[0m             )\n\u001B[1;32m--> 488\u001B[1;33m         torch.autograd.backward(\n\u001B[0m\u001B[0;32m    489\u001B[0m             \u001B[0mself\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mgradient\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mretain_graph\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mcreate_graph\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0minputs\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0minputs\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    490\u001B[0m         )\n",
+      "\u001B[1;32mD:\\Anaconda\\lib\\site-packages\\torch\\autograd\\__init__.py\u001B[0m in \u001B[0;36mbackward\u001B[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001B[0m\n\u001B[0;32m    195\u001B[0m     \u001B[1;31m# some Python versions print out the first line of a multi-line function\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    196\u001B[0m     \u001B[1;31m# calls in the traceback and some print out the last line\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 197\u001B[1;33m     Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001B[0m\u001B[0;32m    198\u001B[0m         \u001B[0mtensors\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mgrad_tensors_\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mretain_graph\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mcreate_graph\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0minputs\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    199\u001B[0m         allow_unreachable=True, accumulate_grad=True)  # Calls into the C++ engine to run the backward pass\n",
+      "\u001B[1;31mRuntimeError\u001B[0m: element 0 of tensors does not require grad and does not have a grad_fn"
+     ]
+    }
+   ],
+   "source": [
+    "loss.backward()"
    ],
    "metadata": {
     "collapsed": false
